<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryContainer"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="?attr/colorOnSecondaryContainer"
        app:title="Demo 07"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/checkbox"
            android:onClick="manejarCliclBotones"
            android:backgroundTint="#673AB7"
            android:background="@drawable/buton_style"
            android:drawableStart="@drawable/baseline_check_box_24"
            android:drawablePadding="2dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:onClick="manejarCliclBotones"
            android:backgroundTint="#0097A7"
            android:background="@drawable/buton_style"
            android:drawableStart="@drawable/baseline_filter_tilt_shift_24"
            android:text="@string/radiobutton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="manejarCliclBotones"
            android:backgroundTint="#B2EBF2"
            android:background="@drawable/buton_style"
            android:drawableStart="@drawable/baseline_arrow_drop_down_24"
            android:text="@string/spinner" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>